force-app/main/default/objects/Account/fields/dtmGiro__c.field-meta.xml
<CustomField>
    <fullName>dtmGiro__c</fullName>
    <description>DTT-240313-MVP1-Campo para seleccionar el giro del cliente</description>
    <inlineHelpText>El giro es la principal actividad de la empresa o negocio.</inlineHelpText>
    <label>Giro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>dtmGiro</valueSetName>
    </valueSet>
</CustomField>