force-app/main/default/objects/Account/fields/dtmLead__c.field-meta.xml
<CustomField>
    <fullName>dtmLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DTT-240421-MVP1-TEL60 - campo para relacionar cuenta con lead</description>
    <label>dtmLead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>