force-app/main/default/objects/Account/fields/dtmSectorDENUE__c.field-meta.xml
<CustomField>
    <fullName>dtmSectorDENUE__c</fullName>
    <description>DTT-240313-MVP1-Es la clasificación en la que se dividen las actividades económicas de las empresas públicas y privadas del país. Y sirve como agrupador de los subsectores DENUE.</description>
    <label>Sector DENUE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dtmGiro__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>dtmSectorDENUE</valueSetName>
    </valueSet>
</CustomField>