force-app/main/default/objects/Account/fields/dtmSubsectorDENUE__c.field-meta.xml
<CustomField>
    <fullName>dtmSubsectorDENUE__c</fullName>
    <description>DTT-240313-MVP1-Es un subnivel del sector DENUE que agrupa las actividades económicas en común (Giros) de un sector.</description>
    <label>Subsector DENUE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dtmGiro__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>dtmSubsectorDENUE</valueSetName>
    </valueSet>
</CustomField>