force-app/main/default/objects/Account/recordTypes/dtmPartnerAcc.recordType-meta.xml
<RecordType>
    <fullName>dtmPartnerAcc</fullName>
    <active>true</active>
    <description>DTT-240315-MVP1-TEL783 - RecordType para registro de cuentas tipo partner</description>
    <label>Partner</label>
</RecordType>